--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,19 @@
-# Quantum Drug Discovery - Python Dependencies
+# Quantum Catalyst for Alzheimer's Drug Discovery - Python Dependencies
 
-# Core Scientific Computing
+# Core Scientific Computing (Required)
 numpy>=1.21.0
 scipy>=1.7.0
 
-# Quantum Chemistry (Optional - install for real calculations)
-# Uncomment to enable real quantum chemistry calculations:
-# pyscf>=2.0.0
-# qiskit>=0.45.0
-# qiskit-nature>=0.7.0
-# qiskit-nature-pyscf>=0.4.0
-# qiskit-algorithms>=0.2.0
-# qiskit-aer>=0.13.0
-
-# Visualization
+# Visualization (Required for plotting PES curves, convergence, binding comparisons)
 matplotlib>=3.5.0
-seaborn>=0.12.0
 
-# Data Processing
-pandas>=1.3.0
+# Quantum Chemistry Libraries (Optional - Required for real calculations)
+# Uncomment to enable production-quality quantum chemistry:
+# pyscf>=2.0.0              # Ab initio quantum chemistry
+# qiskit>=0.45.0            # IBM quantum computing framework
+# qiskit-nature>=0.7.0      # Quantum chemistry module
+# qiskit-algorithms>=0.2.0  # VQE implementation
 
-# Progress Bars & CLI
-tqdm>=4.62.0
-
-# Jupyter Notebooks (Optional - for interactive examples)
-jupyter>=1.0.0
-ipywidgets>=8.0.0
-notebook>=6.4.0
-
-# Testing (Optional - for development)
-pytest>=7.0.0
-pytest-cov>=3.0.0
-
-# Code Quality (Optional - for development)
-black>=22.0.0
-flake8>=4.0.0
-mypy>=0.950
-
-# Documentation (Optional - for developers)
-sphinx>=4.5.0
-sphinx-rtd-theme>=1.0.0
+# Development Tools (Optional)
+# pytest>=7.0.0             # Unit testing
+# jupyter>=1.0.0            # Interactive notebooks
